--- a/myapp_synochorus-fiegn/my-app/authapp/src/main/resources/application.properties
+++ b/myapp_synochorus-fiegn/my-app/authapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=3456
-spring.datasource.url=jdbc:mysql://localhost:3306/UserAuthservice444444?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/sendemaildetails?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Bharat@123
 spring.jpa.hibernate.ddl_auto=update
